[gd_scene load_steps=9 format=2]

[ext_resource path="res://GFX/BlueFlame/flame_frames.png" type="Texture" id=1]
[ext_resource path="res://Scripts/BlueFlame.gd" type="Script" id=2]

[sub_resource type="AtlasTexture" id=33]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 32, 128, 32 )

[sub_resource type="AtlasTexture" id=34]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 128, 32, 128, 32 )

[sub_resource type="AtlasTexture" id=35]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 256, 32, 128, 32 )

[sub_resource type="AtlasTexture" id=36]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 384, 32, 128, 32 )

[sub_resource type="SpriteFrames" id=37]
animations = [ {
"frames": [ SubResource( 33 ), SubResource( 34 ), SubResource( 35 ), SubResource( 36 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=32]
radius = 17.8403

[node name="BlueFlame" type="AnimatedSprite"]
modulate = Color( 0.0862745, 0.14902, 0.658824, 1 )
frames = SubResource( 37 )
speed_scale = 5.0
playing = true
script = ExtResource( 2 )

[node name="Hitbox" type="Area2D" parent="."]
position = Vector2( 0.9151, 0 )
collision_layer = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
visible = false
shape = SubResource( 32 )

[node name="Flame_life_cycle" type="Timer" parent="."]
wait_time = 6.0
one_shot = true

[node name="Flame_despawn_timer" type="Timer" parent="."]
wait_time = 12.0
one_shot = true
autostart = true
[connection signal="area_entered" from="Hitbox" to="." method="_on_Hitbox_area_entered"]
[connection signal="timeout" from="Flame_life_cycle" to="." method="_on_Flame_life_cycle_timeout"]
[connection signal="timeout" from="Flame_despawn_timer" to="." method="_on_Flame_despawn_timer_timeout"]
